[tool.poetry]
name = "tensorflow-advanced-techniques-specialization"
version = "0.1.0"
description = "Tensorflow advanced techniques notes ;)"
authors = ["ivanCanaveral <canaveral.ivan@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
tensorflow = "^2.9.0"
jupyterlab = "^3.4.2"
pydot = "^1.4.2"
graphviz = "^0.20"
pydotplus = "^2.0.2"
matplotlib = "^3.5.2"
pandas = "^1.4.2"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
